@@ -379,6 +379,20 @@ CFTypeReleaseCallBack (CFAllocatorRef alloc, const void *value)
   CFRelease (value);
 }
 
+CFTypeRef
+GSTypeCreateCopy (CFAllocatorRef alloc, CFTypeRef cf, CFTypeID typeID)
+{
+  CFRuntimeClass *cls;
+  
+  CF_OBJC_FUNCDISPATCH0(typeID, CFTypeRef, cf, "copy");
+  
+  cls = __CFRuntimeClassTable[typeID];
+  if (cls->copy)
+    return cls->copy (alloc, cf);
+  
+  return CFRetain (cf);
+}
+
 
 
 static CFTypeRef GSRuntimeConstantTable[512];
